--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 *{
    font-family: 'Montserrat'; 
