--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 *{
-   font-family: 'Montserrat'; 
+   font-family: 'Montserrat', Arial; 
 }
 .home-button{
     text-decoration: none;
